Fix alignment for vectors

--- a/app/styles/App.module.css
+++ b/app/styles/App.module.css
@@ -3,16 +3,16 @@
     width: 100vw;
     justify-content: space-between;
     align-items: center;
+    padding: 50px;
 }
 
 .headerContainer p {
     font-size: 25px;
     color: #004977;
-    ;
 }
 
 .logoContainer {
-    
+    width: 100px;
 }
 
 /* Phones */
