--- a/app/styles/Help.module.css
+++ b/app/styles/Help.module.css
@@ -14,6 +14,9 @@
     box-shadow: 1px 6px 20px rgba(5, 75, 120, 0.15);
     border-radius: 15px;
     padding: 0 25px 25px 25px;
+    display: flex;
+    flex-wrap: wrap;
+    align-content: space-between;
 }
 
 .card p {
